infra/K8S/auction-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auction-svc-carsauction
spec:
  selector:
    matchLabels:
      app: auction-svc-carsauction
  template:
    metadata:
      labels:
        app: auction-svc-carsauction
    spec:
      containers:
      - name: auction-svc-carsauction
        image: 171717/auction-svc-carsauction
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: auction-clusterip
spec:
  type: ClusterIP
  selector:
    app: auction-svc-carsauction
  ports:
  - port: 80
    targetPort: 80
    name: web
  - port: 7777
    targetPort: 7777
    name: grpc
