infra/K8S/bid-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bid-svc-carsauction
spec:
  selector:
    matchLabels:
      app: bid-svc-carsauction
  template:
    metadata:
      labels:
        app: bid-svc-carsauction
    spec:
      containers:
      - name: bid-svc-carsauction
        image: 171717/bid-svc-carsauction
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: bid-clusterip
spec:
  type: ClusterIP
  selector:
    app: bid-svc-carsauction
  ports:
  - port: 80
    targetPort: 80
