infra/K8S/notify-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notify-svc-carsauction
spec:
  selector:
    matchLabels:
      app: notify-svc-carsauction
  template:
    metadata:
      labels:
        app: notify-svc-carsauction
    spec:
      containers:
      - name: notify-svc-carsauction
        image: 171717/notify-svc-carsauction
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: notify-clusterip
spec:
  type: ClusterIP
  selector:
    app: notify-svc-carsauction
  ports:
  - port: 80
    targetPort: 80
