infra/K8S/search-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-svc-carsauction
spec:
  selector:
    matchLabels:
      app: search-svc-carsauction
  template:
    metadata:
      labels:
        app: search-svc-carsauction
    spec:
      containers:
      - name: search-svc-carsauction
        image: 171717/search-svc-carsauction
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: search-clusterip
spec:
  type: ClusterIP
  selector:
    app: search-svc-carsauction
  ports:
  - port: 80
    targetPort: 80
